[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
fuser = "0.14.0"
hyper = { version = "1.1.0", features = ["http1"] }
libc = "0.2.152"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
