[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
fuser = "0.14.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
libc = "0.2.152"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["io-util", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
